--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "redis": "^3.1.2",
     "ws": "^8.2.2"
   },
   "devDependencies": {
