--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3'
 services:
+  nginx:
+    image: nginx
+    container_name: ws_notification_api_nginx
+    ports:
+      - 8080:80
+    volumes:
+      - ${PWD}/nginx.conf:/etc/nginx/conf.d/default.conf
   redis:
     image: redis
     container_name: ws_notification_api_redis
@@ -17,8 +24,7 @@ services:
     image: ws-notification-api
     container_name: ws_notification_api_pod2
     ports:
-      - 3001:3001
+      - 3001:3000
     environment:
       - HOST=pod2
-      - PORT=3001
       - REDIS_HOST=redis
